opa/02-port-80-constraint.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sNoPort80
metadata:
  name: no-port-80-pods
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces: ["prod-test","prod"]
